--- a/app/views/dominion_card_sets/show.html.erb
+++ b/app/views/dominion_card_sets/show.html.erb
@@ -29,11 +29,11 @@
 <table>
   <tr><th>Game</th><th>Expansion</th><th>Name</th></tr>
   <% for card in @dominion_card_set.cards %>
-      <tr><td><%=h card.game%></td><td><%=h card.expansion %></td><td><%= link_to card.name, card %></td></tr>
+      <tr><td><%=h card.game%></td><td><%=h card.expansion %></td><td><%= link_to card.name, dominion_card_path( card ) %></td></tr>
   <% end %>
 </table>
 
 <% if can? :edit, @dominion_card_set %>
-    <%= link_to 'Edit this set', edit_dominion_card_set_path(@dominion_card_set) %> |
+    <%= link_to 'Edit this set', edit_dominion_card_set_url(@dominion_card_set) %> |
 <% end %>
 <%= link_to 'Back to Dominion card sets', dominion_card_sets_path %>
