--- a/app/views/dominion_cards/edit.html.erb
+++ b/app/views/dominion_cards/edit.html.erb
@@ -43,5 +43,5 @@
     </p>
 <% end %>
 
-<%= link_to 'Show', card_path( @dominion_card ) %> |
+<%= link_to 'Show this card', dominion_card_path(@dominion_card) %> |
 <%= link_to 'Back to Dominion cards', dominion_cards_path %>
