--- a/app/views/card_sets/edit.html.erb
+++ b/app/views/card_sets/edit.html.erb
@@ -1,49 +1,40 @@
 <h1>Editing card set</h1>
 
 <% form_for(@card_set) do |f| %>
-  <%= f.error_messages %>
-  
-  <% if can? :manage, @card_set %>
-    <p>
-      <%= f.label :game %><br />
-      <%= f.text_field :game %>
-    </p>
-    <p>
-      <%= check_box_tag "card_set[custom]", 'yes', @card_set.custom %>
-      <%= f.label :custom %><br />
-    </p>
-  <% end %>
+    <%= f.error_messages %>
 
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :set_type %><br />
-    <%= f.text_field :set_type %>
-  </p>
-  <p>
-    <%= f.label :comments %><br />
-    <%= f.text_area :comments %>
-  </p>
-  <p>
-    <b>Creator:</b>
-    <%=h @card_set.creator.username %>
-  </p>
-  <p>
-    <b>Cards:</b>
-    <table>
-      <tr><th>include?</th><th>Game</th><th>Expansion</th><th>Name</th></tr>
-    <% for card in @all_cards %>
-      <tr>
-        <td><%= check_box_tag "card_set[card_ids][]", card.id, @card_set.cards.include?(card) %></td>
-        <td><%=h card.game%></td><td><%=h card.expansion %></td><td><%=link_to card.name, card %></td></tr>
+    <% if can? :manage, @card_set %>
+        <p>
+          <%= f.label :game %><br />
+          <%= f.text_field :game %>
+        </p>
+        <p>
+          <%= f.check_box :custom %>
+          <%= f.label :custom %><br />
+        </p>
     <% end %>
-    </table>
-  </p>
-  <p>
-    <%= f.submit 'Update' %>
-  </p>
+
+    <p>
+      <%= f.label :name %><br />
+      <%= f.text_field :name %>
+    </p>
+    <p>
+      <%= f.label :set_type %><br />
+      <%= f.text_field :set_type %>
+    </p>
+    <p>
+      <%= f.label :comments %><br />
+      <%= f.text_area :comments %>
+    </p>
+    <p>
+      <b>Creator:</b>
+      <%=h @card_set.creator.username %>
+    </p>
+    <b>Cards:</b>
+      <%= check_boxes_for_card_set( @card_set ) %>
+    <p>
+      <%= f.submit 'Update' %>
+    </p>
 <% end %>
 
 <%= link_to 'Show this card', card_set_path( @card_set  ) %> |
