--- a/app/views/card_sets/new.html.erb
+++ b/app/views/card_sets/new.html.erb
@@ -1,54 +1,41 @@
 <h1>New card set</h1>
 
 <% form_for(@card_set) do |f| %>
-  <%= f.error_messages %>
+    <%= f.error_messages %>
 
-  <% if can? :manage, CardSet %>
-    <p>
-      <%= f.label :game %><br />
-      <%= f.text_field :game %>
-    </p>
-    <p>
-      <%= check_box_tag "card_set[custom]", 'yes', @card_set.custom %>
-      <%= f.label :custom %><br />
-    </p>
+    <% if can? :manage, @card_set %>
+        <p>
+          <%= f.label :game %><br />
+          <%= f.text_field :game %>
+        </p>
+        <p>
+          <%= f.check_box :custom %>
+          <%= f.label :custom %><br />
+        </p>
 
-  <% else %>
-    <%= hidden_field_tag "card_set[game]", @card_set.game %>
-    <%= hidden_field_tag "card_set[custom]", @card_set.custom %>
-  <% end %>
-
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :set_type %><br />
-    <%= f.text_field :set_type %>
-  </p>
-  <p>
-    <%= f.label :comments %><br />
-    <%= f.text_area :comments %>
-  </p>
-  <p>
-    <b>Cards:</b>
-    <table>
-      <tr><th>include?</th><th>Game</th><th>Expansion</th><th>Name</th></tr>
-    <% for card in @all_cards %>
-      <tr>
-        <% if @rds %>
-          <td><%= check_box_tag "card_set[card_ids][]", card.id, @rds[:cards].include?(card.id) %></td>
-        <% else %>
-          <td><%= check_box_tag "card_set[card_ids][]", card.id, @card_set.cards.include?(card) %></td>
-        <% end %>
-        <td><%=h card.game%></td><td><%=h card.expansion %></td><td><%=link_to card.name, card %></td>
-      </tr>
+    <% else %>
+        <%= hidden_field_tag "card_set[game]", @card_set.game %>
+        <%= hidden_field_tag "card_set[custom]", @card_set.custom %>
     <% end %>
-    </table>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
+
+    <p>
+      <%= f.label :name %><br />
+      <%= f.text_field :name %>
+    </p>
+    <p>
+      <%= f.label :set_type %><br />
+      <%= f.text_field :set_type %>
+    </p>
+    <p>
+      <%= f.label :comments %><br />
+      <%= f.text_area :comments %>
+    </p>
+
+    <b>Cards:</b>
+      <%= check_boxes_for_card_set( @card_set ) %>
+    <p>
+      <%= f.submit 'Create' %>
+    </p>
 <% end %>
 
 <%= link_to 'Back to sets', card_sets_path %>
