--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,42 +1,47 @@
-<% case @game when 'start_player' %>
-  <%= render :partial => @game %>
+<p>
+  <b>Game:</b>
+  <%=h @card.game.humanize %>
+</p>
 
-<% when 'dominion' %>
-  <%= render :partial => @game %>
+<% if can? :manage, @card %>
+    <p>
+      <b>Custom?:</b>
+      <%=h @card.custom %>
+    </p>
+<% end %>
 
-<% else %>
-  <p>
-    <b>Game:</b>
-    <%=h @card.game.humanize %>
-  </p>
+<p>
+  <b>Expansion:</b>
+  <%=h @card.expansion %>
+</p>
 
-  <p>
-    <b>Expansion:</b>
-    <%=h @card.expansion %>
-  </p>
+<p>
+  <b>Name:</b>
+  <%=h @card.name %>
+</p>
 
-  <p>
-    <b>Name:</b>
-    <%=h @card.name %>
-  </p>
+<p>
+  <b>Card type:</b>
+  <%=h @card.card_type %>
+</p>
 
-  <p>
-    <b>Card type:</b>
-    <%=h @card.card_type %>
-  </p>
+<p>
+  <b>Cost:</b>
+  <%=h @card.cost %>
+</p>
 
-  <p>
-    <b>Cost:</b>
-    <%=h @card.cost %>
-  </p>
+<p>
+  <b>Card text:</b>
+  <%= simple_format( @card.card_text ) %>
+</p>
 
-  <p>
-    <b>Card text:</b>
-    <%= simple_format( @card.card_text ) %>
-  </p>
+<p>
+  <b>Creator:</b>
+  <%=h @card.creator.username %>
+</p>
 
-  <p>
-    <b>Creator:</b>
-    <%=h @card.creator.username %>
-  </p>
+<%= link_to_function 'Back', 'history.back()' %>
+<% if can? :edit, @card %>
+    | <%= link_to 'Edit this card', edit_card_path(@card) %> |
+    <%= link_to 'Back to cards', cards_path %>
 <% end %>
