--- a/app/views/dominion_card_sets/new.html.erb
+++ b/app/views/dominion_card_sets/new.html.erb
@@ -32,19 +32,13 @@
       <%= f.text_area :comments %>
     </p>
     <b>Cards:</b>
-    <table>
-      <tr><th>include?</th><th>Game</th><th>Expansion</th><th>Name</th></tr>
-      <% for card in @all_cards %>
-          <tr>
-            <% if @rds %>
-                <td><%= check_box_tag "card_set[card_ids][]", card.id, @rds[:cards].include?(card.id) %></td>
-            <% else %>
-                <td><%= check_box_tag "card_set[card_ids][]", card.id, @dominion_card_set.cards.include?(card) %></td>
-            <% end %>
-            <td><%=h card.game%></td><td><%=h card.expansion %></td><td><%=link_to card.name, card %></td>
-          </tr>
-      <% end %>
-    </table>
+    <% if @rds %>
+        <%= check_boxes_for_card_set( @rds ) %>
+
+    <% else %>
+        <%= check_boxes_for_card_set( @dominion_card_set ) %>
+
+    <% end %>
     <p>
       <%= f.submit 'Create' %>
     </p>
