--- a/app/views/dominion_card_sets/random.html.erb
+++ b/app/views/dominion_card_sets/random.html.erb
@@ -11,7 +11,7 @@
         <td><%=h card.expansion %></td>
         <td><%=h card.cost %></td>
         <td><%=h card.card_type %></td>
-        <td><%=link_to card.name, card %></td>
+        <td><%=link_to card.name, dominion_card_path( card ) %></td>
         <td>
           <% form_tag random_dominion_card_sets_path do %>
               <%= hidden_field_tag "replace[replace_this]", card.id %>
