--- a/app/views/start_player_card_sets/edit.html.erb
+++ b/app/views/start_player_card_sets/edit.html.erb
@@ -32,14 +32,7 @@
     </p>
     <p>
       <b>Cards:</b>
-    <table>
-      <tr><th>include?</th><th>Game</th><th>Expansion</th><th>Name</th></tr>
-      <% for card in @all_cards %>
-          <tr>
-            <td><%= check_box_tag "card_set[card_ids][]", card.id, @start_player_card_set.cards.include?(card) %></td>
-            <td><%=h card.game%></td><td><%=h card.expansion %></td><td><%=link_to card.name, card %></td></tr>
-      <% end %>
-    </table>
+      <%= check_boxes_for_card_set( @start_player_card_set ) %>
     <p>
       <%= f.submit 'Update' %>
     </p>
