Fix the new, edit, create, and update actions and views

--- a/app/views/dominion_card_sets/new.html.erb
+++ b/app/views/dominion_card_sets/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Dominion card set</h1>
 
-<% form_for(@dominion_card_set) do |f| %>
+<% form_for([:dominion, @dominion_card_set]) do |f| %>
     <%= f.error_messages %>
     <%= f.error_messages %>
     <% if @rds %>
