--- a/app/views/dominion_card_sets/edit.html.erb
+++ b/app/views/dominion_card_sets/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Dominion card set</h1>
 
-<% form_for(@dominion_card_set, :url => dominion_card_set_url ) do |f| %>
+<% form_for([:dominion, @dominion_card_set]) do |f| %>
     <%= f.error_messages %>
 
     <% if can? :manage, @dominion_card_set %>
