--- a/app/views/dominion_cards/new.html.erb
+++ b/app/views/dominion_cards/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Dominion card</h1>
 
-<% form_for(@dominion_card) do |f| %>
+<% form_for([:dominion, @dominion_card]) do |f| %>
   <%= f.error_messages %>
 
     <% if can? :manage, Card %>
