--- a/app/views/start_player_card_sets/new.html.erb
+++ b/app/views/start_player_card_sets/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Start Player card set</h1>
 
-<% form_for(@start_player_card_set) do |f| %>
+<% form_for([:start_player, @start_player_card_set]) do |f| %>
     <%= f.error_messages %>
 
     <% if can? :manage, CardSet %>
