--- a/app/views/start_player_cards/show.html.erb
+++ b/app/views/start_player_cards/show.html.erb
@@ -1,7 +1,10 @@
-<h2><%=h @start_player_card.name %></h2>
+<% content_for :extra_items do %>
+    <% if can? :edit, @start_player_card %>
+        / <%= link_to 'edit this card', edit_start_player_card_path(@start_player_card) %>
+    <% end %>
+<% end %>
 
-<%= link_to 'Pick again', random_start_player_cards_path %> |
-<%= link_to 'Create a new card', new_start_player_card_path %>
+<h2><%=h @start_player_card.name %></h2>
 
 <p>
   <b>Arrow:</b>
@@ -22,8 +25,3 @@
   <b>Creator:</b>
   <%=h @start_player_card.creator.username %>
 </p>
-
-<% if can? :edit, @start_player_card %>
-    <%= link_to 'Edit this card', edit_start_player_card_path(@start_player_card) %> |
-    <%= link_to 'Back to Start Player cards', start_player_cards_path %>
-<% end %>
