--- a/app/views/admin/reset.html.erb
+++ b/app/views/admin/reset.html.erb
@@ -1,3 +1,8 @@
+<% content_for :extra_items do %>
+    / <%= link_to 'edit this user', edit_admin_path(@user) %>
+    / <%= link_to 'show this user', admin_path( @user ) %>
+<% end %>
+
 <h1>Reset user's password</h1>
 
 <% form_for( @user, :url => { :action => :reset } ) do |f| %>
@@ -29,5 +34,3 @@
     <%= f.submit 'Reset' %>
   </p>
 <% end %>
-
-<%= link_to 'Back to users', admin_index_path %>
