--- a/app/views/card_sets/edit.html.erb
+++ b/app/views/card_sets/edit.html.erb
@@ -1,3 +1,7 @@
+<% content_for :extra_items do %>
+    / <%= link_to 'show this set', card_set_path( @card_set  ) %>
+<% end %>
+
 <h1>Editing card set</h1>
 
 <% form_for(@card_set) do |f| %>
@@ -36,6 +40,3 @@
       <%= f.submit 'Update' %>
     </p>
 <% end %>
-
-<%= link_to 'Show this card', card_set_path( @card_set  ) %> |
-<%= link_to 'Back to sets', card_sets_path %>
