--- a/app/views/cards/edit.html.erb
+++ b/app/views/cards/edit.html.erb
@@ -1,3 +1,6 @@
+<% content_for :extra_items do %>
+    / <%= link_to 'Show this card', card_path(@card) %>
+<% end %>
 <h1>Editing card</h1>
 
 <% form_for(@card) do |f| %>
@@ -42,6 +45,3 @@
       <%= f.submit 'Update' %>
     </p>
 <% end %>
-
-<%= link_to 'Show this card', card_path(@card) %> |
-<%= link_to 'Back to Dominion cards', cards_path %>
