--- a/app/views/dominion_card_sets/show.html.erb
+++ b/app/views/dominion_card_sets/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :extra_items do %>
+    / <%= link_to 'edit this set', edit_dominion_card_set_url(@dominion_card_set) %>
+<% end %>
+
 <p>
   <b>Creator:</b>
   <%=h @dominion_card_set.creator.username %>
@@ -32,8 +36,3 @@
       <tr><td><%=h card.game%></td><td><%=h card.expansion %></td><td><%= link_to card.name, dominion_card_path( card ) %></td></tr>
   <% end %>
 </table>
-
-<% if can? :edit, @dominion_card_set %>
-    <%= link_to 'Edit this set', edit_dominion_card_set_url(@dominion_card_set) %> |
-<% end %>
-<%= link_to 'Back to Dominion card sets', dominion_card_sets_path %>
