Fix the includes/excludes list parsing when building the options page   - The checkboxes weren't being checked correctly for already included/excluded cards
Clean up / Refactor the helpers code into the right helper file.

Minor clean up of views

--- a/app/views/dominion_card_sets/random.html.erb
+++ b/app/views/dominion_card_sets/random.html.erb
@@ -27,6 +27,6 @@
 </table>
 
 <p>
-  <b>Options used</b> <sub>(<%= link_to 'Change options', random_options_dominion_card_sets_path %>)</sub><b>:</b>
+  <b>Options used</b> <sub>(<%= link_to 'Change options', random_options_dominion_card_sets_path %>)</sub>
   <%= list_for @rds.options %>
 </p>
