Add mobile.erb views for those views visible to the mobile version of the app.
Change many helpers, layouts, and controllers to accomodate all the changes in the mobile views.

--- a/app/views/layouts/start_player_cards.html.erb
+++ b/app/views/layouts/start_player_cards.html.erb
@@ -1,5 +1,5 @@
 <% content_for :sub_nav_list_items do %>
-    <%= link_to 'random', random_start_player_cards_path %>
+    <%= link_to 'random', start_player_card_path( :random ) %>
     / <%= link_to 'new', new_start_player_card_path %>
     <% if user_signed_in? %>
         / <%= link_to 'list', start_player_cards_path %>
