--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -1,19 +1,32 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
-  <head>
-    <title>Card Picker</title>  
-    <%= stylesheet_link_tag "/jqtouch/jqtouch.min.css", "/jqtouch/themes/jqt/theme.min.css" %>
-    <%= javascript_include_tag "/jqtouch/jquery.1.3.2.min.js", "/jqtouch/jqtouch.min.js", "mobile" %>
-    <%= yield(:head) %>
-  </head>
-  <body>
-    <div class="current">
-      <div class="toolbar">
-        <h1>Card Picker</h1>
-      </div>
+<head>
+  <title><%= h(yield( :title )) || 'Untitled' %></title>
+  <%= stylesheet_link_tag "/jqtouch/jqtouch.min.css", "/jqtouch/themes/jqt/theme.min.css" %>
+  <%= javascript_include_tag "/jqtouch/jquery.1.3.2.min.js", "/jqtouch/jqtouch.min.js", "mobile" %>
+  <%= yield :head %>
+</head>
 
-      <%= yield %>
-    </div>
-  </body>
+<body>
+<div class="current" >
+  <% if show_title? %>
+      <div class="toolbar">
+        <h1><%=h yield :title %></h1>
+      <%= yield :toolbar_buttons %>
+      </div>
+  <% end %>
+
+  <% unless flash.empty? %>
+      <div class="info">
+        <%- flash.each do |name, msg| -%>
+            <%= content_tag :div, msg, :id => "flash_#{name}" %>
+        <%- end -%>
+      </div>
+  <% end %>
+
+  <%= yield %>
+
+</div>
+</body>
 </html>
