--- a/public/stylesheets/cardpicker.css
+++ b/public/stylesheets/cardpicker.css
@@ -98,6 +98,110 @@ a:hover { color: #d60000; text-decoration: underline; }
     padding: 2px;
 }
 
+
+div.equal_col {
+    float: left;
+}
+
+.random_dominion_list ul {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+.random_dominion_list a:link { color: black; text-decoration: none; }
+.random_dominion_list a:visited { color: black; text-decoration: none; }
+.random_dominion_list .card_link:hover {
+    opacity: 0.6;
+}
+
+.random_dominion_list li.card {
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    list-style: none;
+    font-size: 26px;
+    font-weight: bold;
+    white-space: nowrap;
+    width: 200px;
+    padding: 19px 25px 3px 66px;
+}
+
+.random_dominion_list li.card {
+    background: url('/images/dominion-banners.png')  no-repeat;
+}
+
+.random_dominion_list li.action {
+    background-position: 0 0;
+
+}
+
+.random_dominion_list li.action-attack {
+    background-position: 0 -53px;
+
+}
+
+.random_dominion_list li.action-duration {
+    background-position: 0 -106px;
+
+}
+
+.random_dominion_list li.action-reaction {
+    background-position: 0 -159px;
+
+}
+
+.random_dominion_list li.action-victory {
+    background-position: 0 -212px;
+
+}
+
+.random_dominion_list li.treasure {
+    background-position: 0 -265px;
+
+}
+
+.random_dominion_list li.treasure-victory {
+    background-position: 0 -318px;
+
+}
+
+.random_dominion_list li.victory {
+    background-position: 0 -371px;
+
+}
+
+.random_dominion_list li input {
+    position: absolute;
+    top: 0;
+    right: 5px;
+}
+
+.random_dominion_list li img.expansion {
+    border: 0;
+    position: absolute;
+    bottom: 6px;
+    right: 8px;
+}
+
+.random_dominion_list li span.cost {
+    position: absolute;
+    top: 18px;
+    left: 19px;
+    font-weight: bold;
+    font-size: 32px;
+}
+
+.random_dominion_list li img.potion {
+    border: 0;
+    position: absolute;
+    top: 20px;
+    left: 50px;
+}
+
+div.options {
+    clear: both;
+}
+
 #divider_bottom {
     background: url('../images/dbl_line.png') top center repeat-x;
     padding: 1px;
