--- a/app/views/dominion_card_sets/random.html.erb
+++ b/app/views/dominion_card_sets/random.html.erb
@@ -20,9 +20,9 @@
           <% end %>
           <% form_tag random_dominion_card_sets_path do %>
               <%= hidden_field_tag "replace[replace_this]", card.id %>
-              <% for rep_card in @rds.cards %>
-                  <%= hidden_field_tag "replace[replace_includes][]", rep_card.id %>
-                  <%= hidden_field_tag "replace[replace_excludes][]", rep_card.id %>
+              <% for rep_card_id in @rds.card_ids %>
+                  <%= hidden_field_tag "replace[replace_includes][]", rep_card_id %>
+                  <%= hidden_field_tag "replace[replace_excludes][]", rep_card_id %>
               <% end %>
               <%= image_submit_tag "/images/Refresh.png" %>
           <% end %>
@@ -47,9 +47,9 @@
           <% end %>
           <% form_tag random_dominion_card_sets_path do %>
               <%= hidden_field_tag "replace[replace_this]", card.id %>
-              <% for rep_card in @rds.cards %>
-                  <%= hidden_field_tag "replace[replace_includes][]", rep_card.id %>
-                  <%= hidden_field_tag "replace[replace_excludes][]", rep_card.id %>
+              <% for rep_card_id in @rds.card_ids %>
+                  <%= hidden_field_tag "replace[replace_includes][]", rep_card_id %>
+                  <%= hidden_field_tag "replace[replace_excludes][]", rep_card_id %>
               <% end %>
               <%= image_submit_tag "/images/Refresh.png" %>
           <% end %>
